[metadata]
name = conn
version = attr: conn.__version__
description = Conn is a SSH/Telnet connection manager and automation module
long_description = file: README.md
keywords = networking, automation, ssh, telnet, connection manager
author = Federico Luzzi
author_mail = fluzzi@gmail.com
url = https://github.com/fluzzi/connpy
license = MIT License
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Topic :: System :: Networking
    Intended Audience :: Telecommunications Industry
    Programming Language :: Python :: 3
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Unix

[options]
packages = find:
install_requires =
    inquirer
    pexpect
    pycryptodome

[options.entry_points]
console_scripts =
    conn = conn.app:main
