[metadata]
name = connpy
version = attr: connpy._version.__version__
description = Connpy is a SSH/Telnet connection manager and automation module
long_description = file: README.md
long_description_content_type = text/markdown
keywords = networking, automation, docker, kubernetes, ssh, telnet, connection manager
author = Federico Luzzi
author_email = fluzzi@gmail.com
url = https://github.com/fluzzi/connpy
license = Custom Software License
license_files = LICENSE
project_urls =
    Bug Tracker = https://github.com/fluzzi/connpy/issues
    Documentation = https://fluzzi.github.io/connpy/
classifiers =
    Development Status :: 4 - Beta
    Topic :: System :: Networking
    Intended Audience :: Telecommunications Industry
    Programming Language :: Python :: 3
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Unix

[options]
packages = find:
install_requires =
    rich>=13.7.1
    rich-argparse>=1.4.0
    argcomplete>=3.1.2
    inquirer>=3.3.0
    pexpect>=4.8.0
    pycryptodome>=3.18.0
    PyYAML>=6.0.1
    pyfzf>=0.3.1
    litellm>=1.40.0
    grpcio>=1.62.0
    grpcio-tools>=1.62.0
    protobuf>=6.31.1,<7.0.0
    google-api-python-client>=2.125.0
    google-auth-oauthlib>=1.2.0
    google-auth-httplib2>=0.2.0

[options.entry_points]
console_scripts =
    conn = connpy.__main__:main
    connpy = connpy.__main__:main
    connpy-completion-helper = connpy.completion:main

[options.package_data]
connpy = 
    core_plugins/*
    proto/*
    grpc/*.proto
